1999-06-02  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-gardeb.adb, s-gaplsp.ads.in: Sanity directory is now an
 	env. variable instead of a configuration option (in order to test
 	with a binary release).

1999-05-29  Pascal Obry  <obry@gnat.com>
	
	* s-garsta.adb: Remove withed unit System.Garlic.Exceptions that
	is not needed. Will fix the nightly build failures.

1999-05-19  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garopt.adb: Fix use of Default_Boot_Server for Ada starter
	(fix for 6510-008).

	* s-gardeb.ads: Increase debug flag table (there are more than 25
	debug keys).

1999-05-03  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.zip (install-zlib): Build libz.a prior to installation
	time.

	* Makefile.am (install-extra-libs): Install directory before
	installing the libraries, fixes 0004-G08 failure on systems
	without zlib.

1999-04-15  Samuel Tardieu  <sam@inf.enst.fr>

	* stamp-h.in: This file needs to be present in the distribution to 
	avoid the need for autoheader.

1999-04-12  Samuel Tardieu  <sam@inf.enst.fr>

	* 5sgarcon.ads: New constant file for Solaris.

	* 5lgarcon.ads: New constant file for Linux.

	* s-gafizi.ads: Add pragma Linker_Options ("-lz") to drag the zlib 
	in the executable.

	* garcon.txt: New file containing the header to use for static
	platform specific files.

	* constants.sh: Add code to generate the platform specific file

	* Makefile.am: Add more flexibility in the build and install
	process for filters.
	If a platform specific file could be found, use it instead of
	building it.
	Replace ${} by $() so that it doesn't confuse automake any longer.

	* Makefile.zip: Install libz.a only when no zlib has been found on 
	the system at configure time.

1999-04-10  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garuti.adb: Change Tasking_Soft_Links into Soft_Links. This
	unit is needed for Abort_Defer and Abort_Undefer.

1999-02-17  Samuel Tardieu  <sam@inf.enst.fr>
